Switches Docker base image to Alpine.